--- a/collectorcore/src/main/AndroidManifest.xml
+++ b/collectorcore/src/main/AndroidManifest.xml
@@ -1,2 +1,5 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-          package="xyz.sx.collectorcore"/>
+          package="xyz.sx.collectorcore">
+    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION"/>
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION"/>
+</manifest>
